--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.5",
     "@hookform/resolvers": "^3.3.1",
     "@next/font": "^13.4.19",
     "@types/node": "20.6.0",
