--- a/package.json
+++ b/package.json
@@ -21,13 +21,19 @@
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.1",
     "next": "13.4.19",
+    "nprogress": "^0.2.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/nprogress": "^0.2.0"
   }
 }
