--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
