--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "yup": "^1.2.0"
+    "yup": "^1.3.1"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0"
